fixed navbar dropdown being behind the hero section in home pages

--- a/src/App.css
+++ b/src/App.css
@@ -42,12 +42,18 @@ p {
 
 .notifDrop {
 	position: relative;
-	z-index: 9999;
+	z-index: 99999999;
 }
 
 .bringBack {
 	position: relative;
 	z-index: -9999;
+}
+@media (max-width: 1700px) {
+	.heroBringBack {
+		position: relative;
+		z-index: -9999;
+	}
 }
 
 /* .card1 {
